--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <Link rel="stylesheet" href="./css/reset.css"></Link>
+    <Link rel="stylesheet" href="/css/reset.css"></Link>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
